plugins/ocamlopt.opt/parsing/parser.output
   0  $accept : %entry% $end

   1  implementation : structure EOF

   2  interface : signature EOF

   3  toplevel_phrase : top_structure SEMISEMI
   4                  | seq_expr SEMISEMI
   5                  | toplevel_directive SEMISEMI
   6                  | EOF

   7  top_structure : structure_item
   8                | structure_item top_structure

   9  use_file : use_file_tail
  10           | seq_expr use_file_tail

  11  use_file_tail : EOF
  12                | SEMISEMI EOF
  13                | SEMISEMI seq_expr use_file_tail
  14                | SEMISEMI structure_item use_file_tail
  15                | SEMISEMI toplevel_directive use_file_tail
  16                | structure_item use_file_tail
  17                | toplevel_directive use_file_tail

  18  module_expr : mod_longident
  19              | STRUCT structure END
  20              | STRUCT structure error
  21              | FUNCTOR LPAREN UIDENT COLON module_type RPAREN MINUSGREATER module_expr
  22              | module_expr LPAREN module_expr RPAREN
  23              | module_expr LPAREN module_expr error
  24              | LPAREN module_expr COLON module_type RPAREN
  25              | LPAREN module_expr COLON module_type error
  26              | LPAREN module_expr RPAREN
  27              | LPAREN module_expr error
  28              | LPAREN VAL expr COLON package_type RPAREN

  29  structure : structure_tail
  30            | seq_expr structure_tail

  31  structure_tail :
  32                 | SEMISEMI
  33                 | SEMISEMI seq_expr structure_tail
  34                 | SEMISEMI structure_item structure_tail
  35                 | structure_item structure_tail

  36  structure_item : LET rec_flag let_bindings
  37                 | EXTERNAL val_ident COLON core_type EQUAL primitive_declaration
  38                 | TYPE type_declarations
  39                 | EXCEPTION UIDENT constructor_arguments
  40                 | EXCEPTION UIDENT EQUAL constr_longident
  41                 | MODULE UIDENT module_binding
  42                 | MODULE REC module_rec_bindings
  43                 | MODULE TYPE ident EQUAL module_type
  44                 | OPEN mod_longident
  45                 | CLASS class_declarations
  46                 | CLASS TYPE class_type_declarations
  47                 | INCLUDE module_expr

  48  module_binding : EQUAL module_expr
  49                 | COLON module_type EQUAL module_expr
  50                 | LPAREN UIDENT COLON module_type RPAREN module_binding

  51  module_rec_bindings : module_rec_binding
  52                      | module_rec_bindings AND module_rec_binding

  53  module_rec_binding : UIDENT COLON module_type EQUAL module_expr

  54  module_type : mty_longident
  55              | SIG signature END
  56              | SIG signature error
  57              | FUNCTOR LPAREN UIDENT COLON module_type RPAREN MINUSGREATER module_type
  58              | module_type WITH with_constraints
  59              | MODULE TYPE OF module_expr
  60              | LPAREN module_type RPAREN
  61              | LPAREN module_type error

  62  signature :
  63            | signature signature_item
  64            | signature signature_item SEMISEMI

  65  signature_item : VAL val_ident COLON core_type
  66                 | EXTERNAL val_ident COLON core_type EQUAL primitive_declaration
  67                 | TYPE type_declarations
  68                 | EXCEPTION UIDENT constructor_arguments
  69                 | MODULE UIDENT module_declaration
  70                 | MODULE REC module_rec_declarations
  71                 | MODULE TYPE ident
  72                 | MODULE TYPE ident EQUAL module_type
  73                 | OPEN mod_longident
  74                 | INCLUDE module_type
  75                 | CLASS class_descriptions
  76                 | CLASS TYPE class_type_declarations

  77  module_declaration : COLON module_type
  78                     | LPAREN UIDENT COLON module_type RPAREN module_declaration

  79  module_rec_declarations : module_rec_declaration
  80                          | module_rec_declarations AND module_rec_declaration

  81  module_rec_declaration : UIDENT COLON module_type

  82  class_declarations : class_declarations AND class_declaration
  83                     | class_declaration

  84  class_declaration : virtual_flag class_type_parameters LIDENT class_fun_binding

  85  class_fun_binding : EQUAL class_expr
  86                    | COLON class_type EQUAL class_expr
  87                    | labeled_simple_pattern class_fun_binding

  88  class_type_parameters :
  89                        | LBRACKET type_parameter_list RBRACKET

  90  class_fun_def : labeled_simple_pattern MINUSGREATER class_expr
  91                | labeled_simple_pattern class_fun_def

  92  class_expr : class_simple_expr
  93             | FUN class_fun_def
  94             | class_simple_expr simple_labeled_expr_list
  95             | LET rec_flag let_bindings IN class_expr

  96  class_simple_expr : LBRACKET core_type_comma_list RBRACKET class_longident
  97                    | class_longident
  98                    | OBJECT class_structure END
  99                    | OBJECT class_structure error
 100                    | LPAREN class_expr COLON class_type RPAREN
 101                    | LPAREN class_expr COLON class_type error
 102                    | LPAREN class_expr RPAREN
 103                    | LPAREN class_expr error

 104  class_structure : class_self_pattern class_fields

 105  class_self_pattern : LPAREN pattern RPAREN
 106                     | LPAREN pattern COLON core_type RPAREN
 107                     |

 108  class_fields :
 109               | class_fields INHERIT override_flag class_expr parent_binder
 110               | class_fields VAL virtual_value
 111               | class_fields VAL value
 112               | class_fields virtual_method
 113               | class_fields concrete_method
 114               | class_fields CONSTRAINT constrain
 115               | class_fields INITIALIZER seq_expr

 116  parent_binder : AS LIDENT
 117                |

 118  virtual_value : override_flag MUTABLE VIRTUAL label COLON core_type
 119                | VIRTUAL mutable_flag label COLON core_type

 120  value : override_flag mutable_flag label EQUAL seq_expr
 121        | override_flag mutable_flag label type_constraint EQUAL seq_expr

 122  virtual_method : METHOD override_flag PRIVATE VIRTUAL label COLON poly_type
 123                 | METHOD override_flag VIRTUAL private_flag label COLON poly_type

 124  concrete_method : METHOD override_flag private_flag label strict_binding
 125                  | METHOD override_flag private_flag label COLON poly_type EQUAL seq_expr

 126  class_type : class_signature
 127             | QUESTION LIDENT COLON simple_core_type_or_tuple MINUSGREATER class_type
 128             | OPTLABEL simple_core_type_or_tuple MINUSGREATER class_type
 129             | LIDENT COLON simple_core_type_or_tuple MINUSGREATER class_type
 130             | simple_core_type_or_tuple MINUSGREATER class_type

 131  class_signature : LBRACKET core_type_comma_list RBRACKET clty_longident
 132                  | clty_longident
 133                  | OBJECT class_sig_body END
 134                  | OBJECT class_sig_body error

 135  class_sig_body : class_self_type class_sig_fields

 136  class_self_type : LPAREN core_type RPAREN
 137                  |

 138  class_sig_fields :
 139                   | class_sig_fields INHERIT class_signature
 140                   | class_sig_fields VAL value_type
 141                   | class_sig_fields virtual_method_type
 142                   | class_sig_fields method_type
 143                   | class_sig_fields CONSTRAINT constrain

 144  value_type : VIRTUAL mutable_flag label COLON core_type
 145             | MUTABLE virtual_flag label COLON core_type
 146             | label COLON core_type

 147  method_type : METHOD private_flag label COLON poly_type

 148  virtual_method_type : METHOD PRIVATE VIRTUAL label COLON poly_type
 149                      | METHOD VIRTUAL private_flag label COLON poly_type

 150  constrain : core_type EQUAL core_type

 151  class_descriptions : class_descriptions AND class_description
 152                     | class_description

 153  class_description : virtual_flag class_type_parameters LIDENT COLON class_type

 154  class_type_declarations : class_type_declarations AND class_type_declaration
 155                          | class_type_declaration

 156  class_type_declaration : virtual_flag class_type_parameters LIDENT EQUAL class_signature

 157  seq_expr : expr
 158           | expr SEMI
 159           | expr SEMI seq_expr

 160  labeled_simple_pattern : QUESTION LPAREN label_let_pattern opt_default RPAREN
 161                         | QUESTION label_var
 162                         | OPTLABEL LPAREN let_pattern opt_default RPAREN
 163                         | OPTLABEL pattern_var
 164                         | TILDE LPAREN label_let_pattern RPAREN
 165                         | TILDE label_var
 166                         | LABEL simple_pattern
 167                         | simple_pattern

 168  pattern_var : LIDENT
 169              | UNDERSCORE

 170  opt_default :
 171              | EQUAL seq_expr

 172  label_let_pattern : label_var
 173                    | label_var COLON core_type

 174  label_var : LIDENT

 175  let_pattern : pattern
 176              | pattern COLON core_type

 177  expr : simple_expr
 178       | simple_expr simple_labeled_expr_list
 179       | LET rec_flag let_bindings IN seq_expr
 180       | LET MODULE UIDENT module_binding IN seq_expr
 181       | LET OPEN mod_longident IN seq_expr
 182       | mod_longident DOT LPAREN seq_expr RPAREN
 183       | FUNCTION opt_bar match_cases
 184       | FUN labeled_simple_pattern fun_def
 185       | FUN LPAREN TYPE LIDENT RPAREN fun_def
 186       | MATCH seq_expr WITH opt_bar match_cases
 187       | TRY seq_expr WITH opt_bar match_cases
 188       | TRY seq_expr WITH error
 189       | expr_comma_list
 190       | constr_longident simple_expr
 191       | name_tag simple_expr
 192       | IF seq_expr THEN expr ELSE expr
 193       | IF seq_expr THEN expr
 194       | WHILE seq_expr DO seq_expr DONE
 195       | FOR val_ident EQUAL seq_expr direction_flag seq_expr DO seq_expr DONE
 196       | expr COLONCOLON expr
 197       | LPAREN COLONCOLON RPAREN LPAREN expr COMMA expr RPAREN
 198       | expr INFIXOP0 expr
 199       | expr INFIXOP1 expr
 200       | expr INFIXOP2 expr
 201       | expr INFIXOP3 expr
 202       | expr INFIXOP4 expr
 203       | expr PLUS expr
 204       | expr PLUSDOT expr
 205       | expr MINUS expr
 206       | expr MINUSDOT expr
 207       | expr STAR expr
 208       | expr EQUAL expr
 209       | expr LESS expr
 210       | expr GREATER expr
 211       | expr OR expr
 212       | expr BARBAR expr
 213       | expr AMPERSAND expr
 214       | expr AMPERAMPER expr
 215       | expr COLONEQUAL expr
 216       | subtractive expr
 217       | additive expr
 218       | simple_expr DOT label_longident LESSMINUS expr
 219       | simple_expr DOT LPAREN seq_expr RPAREN LESSMINUS expr
 220       | simple_expr DOT LBRACKET seq_expr RBRACKET LESSMINUS expr
 221       | simple_expr DOT LBRACE expr RBRACE LESSMINUS expr
 222       | label LESSMINUS expr
 223       | ASSERT simple_expr
 224       | LAZY simple_expr
 225       | OBJECT class_structure END
 226       | OBJECT class_structure error

 227  simple_expr : val_longident
 228              | constant
 229              | constr_longident
 230              | name_tag
 231              | LPAREN seq_expr RPAREN
 232              | LPAREN seq_expr error
 233              | BEGIN seq_expr END
 234              | BEGIN END
 235              | BEGIN seq_expr error
 236              | LPAREN seq_expr type_constraint RPAREN
 237              | simple_expr DOT label_longident
 238              | simple_expr DOT LPAREN seq_expr RPAREN
 239              | simple_expr DOT LPAREN seq_expr error
 240              | simple_expr DOT LBRACKET seq_expr RBRACKET
 241              | simple_expr DOT LBRACKET seq_expr error
 242              | simple_expr DOT LBRACE expr RBRACE
 243              | simple_expr DOT LBRACE expr_comma_list error
 244              | LBRACE record_expr RBRACE
 245              | LBRACE record_expr error
 246              | LBRACKETBAR expr_semi_list opt_semi BARRBRACKET
 247              | LBRACKETBAR expr_semi_list opt_semi error
 248              | LBRACKETBAR BARRBRACKET
 249              | LBRACKET expr_semi_list opt_semi RBRACKET
 250              | LBRACKET expr_semi_list opt_semi error
 251              | PREFIXOP simple_expr
 252              | BANG simple_expr
 253              | NEW class_longident
 254              | LBRACELESS field_expr_list opt_semi GREATERRBRACE
 255              | LBRACELESS field_expr_list opt_semi error
 256              | LBRACELESS GREATERRBRACE
 257              | simple_expr SHARP label
 258              | LPAREN MODULE module_expr COLON package_type RPAREN

 259  simple_labeled_expr_list : labeled_simple_expr
 260                           | simple_labeled_expr_list labeled_simple_expr

 261  labeled_simple_expr : simple_expr
 262                      | label_expr

 263  label_expr : LABEL simple_expr
 264             | TILDE label_ident
 265             | QUESTION label_ident
 266             | OPTLABEL simple_expr

 267  label_ident : LIDENT

 268  let_bindings : let_binding
 269               | let_bindings AND let_binding

 270  let_binding : val_ident fun_binding
 271              | val_ident COLON typevar_list DOT core_type EQUAL seq_expr
 272              | pattern EQUAL seq_expr

 273  fun_binding : strict_binding
 274              | type_constraint EQUAL seq_expr

 275  strict_binding : EQUAL seq_expr
 276                 | labeled_simple_pattern fun_binding
 277                 | LPAREN TYPE LIDENT RPAREN fun_binding

 278  match_cases : pattern match_action
 279              | match_cases BAR pattern match_action

 280  fun_def : match_action
 281          | labeled_simple_pattern fun_def
 282          | LPAREN TYPE LIDENT RPAREN fun_def

 283  match_action : MINUSGREATER seq_expr
 284               | WHEN seq_expr MINUSGREATER seq_expr

 285  expr_comma_list : expr_comma_list COMMA expr
 286                  | expr COMMA expr

 287  record_expr : simple_expr WITH lbl_expr_list opt_semi
 288              | lbl_expr_list opt_semi

 289  lbl_expr_list : label_longident EQUAL expr
 290                | label_longident
 291                | lbl_expr_list SEMI label_longident EQUAL expr
 292                | lbl_expr_list SEMI label_longident

 293  field_expr_list : label EQUAL expr
 294                  | field_expr_list SEMI label EQUAL expr

 295  expr_semi_list : expr
 296                 | expr_semi_list SEMI expr

 297  type_constraint : COLON core_type
 298                  | COLON core_type COLONGREATER core_type
 299                  | COLONGREATER core_type
 300                  | COLON error
 301                  | COLONGREATER error

 302  pattern : simple_pattern
 303          | pattern AS val_ident
 304          | pattern_comma_list
 305          | constr_longident pattern
 306          | name_tag pattern
 307          | pattern COLONCOLON pattern
 308          | LPAREN COLONCOLON RPAREN LPAREN pattern COMMA pattern RPAREN
 309          | pattern BAR pattern
 310          | LAZY simple_pattern

 311  simple_pattern : val_ident
 312                 | UNDERSCORE
 313                 | signed_constant
 314                 | CHAR DOTDOT CHAR
 315                 | constr_longident
 316                 | name_tag
 317                 | SHARP type_longident
 318                 | LBRACE lbl_pattern_list record_pattern_end RBRACE
 319                 | LBRACE lbl_pattern_list opt_semi error
 320                 | LBRACKET pattern_semi_list opt_semi RBRACKET
 321                 | LBRACKET pattern_semi_list opt_semi error
 322                 | LBRACKETBAR pattern_semi_list opt_semi BARRBRACKET
 323                 | LBRACKETBAR BARRBRACKET
 324                 | LBRACKETBAR pattern_semi_list opt_semi error
 325                 | LPAREN pattern RPAREN
 326                 | LPAREN pattern error
 327                 | LPAREN pattern COLON core_type RPAREN
 328                 | LPAREN pattern COLON core_type error

 329  pattern_comma_list : pattern_comma_list COMMA pattern
 330                     | pattern COMMA pattern

 331  pattern_semi_list : pattern
 332                    | pattern_semi_list SEMI pattern

 333  lbl_pattern_list : label_longident EQUAL pattern
 334                   | label_longident
 335                   | lbl_pattern_list SEMI label_longident EQUAL pattern
 336                   | lbl_pattern_list SEMI label_longident

 337  record_pattern_end : opt_semi
 338                     | SEMI UNDERSCORE opt_semi

 339  primitive_declaration : STRING
 340                        | STRING primitive_declaration

 341  type_declarations : type_declaration
 342                    | type_declarations AND type_declaration

 343  type_declaration : type_parameters LIDENT type_kind constraints

 344  constraints : constraints CONSTRAINT constrain
 345              |

 346  type_kind :
 347            | EQUAL core_type
 348            | EQUAL PRIVATE core_type
 349            | EQUAL constructor_declarations
 350            | EQUAL PRIVATE constructor_declarations
 351            | EQUAL private_flag BAR constructor_declarations
 352            | EQUAL private_flag LBRACE label_declarations opt_semi RBRACE
 353            | EQUAL core_type EQUAL private_flag opt_bar constructor_declarations
 354            | EQUAL core_type EQUAL private_flag LBRACE label_declarations opt_semi RBRACE

 355  type_parameters :
 356                  | type_parameter
 357                  | LPAREN type_parameter_list RPAREN

 358  type_parameter : type_variance QUOTE ident

 359  type_variance :
 360                | PLUS
 361                | MINUS

 362  type_parameter_list : type_parameter
 363                      | type_parameter_list COMMA type_parameter

 364  constructor_declarations : constructor_declaration
 365                           | constructor_declarations BAR constructor_declaration

 366  constructor_declaration : constr_ident constructor_arguments

 367  constructor_arguments :
 368                        | OF core_type_list

 369  label_declarations : label_declaration
 370                     | label_declarations SEMI label_declaration

 371  label_declaration : mutable_flag label COLON poly_type

 372  with_constraints : with_constraint
 373                   | with_constraints AND with_constraint

 374  with_constraint : TYPE type_parameters label_longident with_type_binder core_type constraints
 375                  | TYPE type_parameters label_longident COLONEQUAL core_type
 376                  | MODULE mod_longident EQUAL mod_ext_longident
 377                  | MODULE mod_longident COLONEQUAL mod_ext_longident

 378  with_type_binder : EQUAL
 379                   | EQUAL PRIVATE

 380  typevar_list : QUOTE ident
 381               | typevar_list QUOTE ident

 382  poly_type : core_type
 383            | typevar_list DOT core_type

 384  core_type : core_type2
 385            | core_type2 AS QUOTE ident

 386  core_type2 : simple_core_type_or_tuple
 387             | QUESTION LIDENT COLON core_type2 MINUSGREATER core_type2
 388             | OPTLABEL core_type2 MINUSGREATER core_type2
 389             | LIDENT COLON core_type2 MINUSGREATER core_type2
 390             | core_type2 MINUSGREATER core_type2

 391  simple_core_type : simple_core_type2
 392                   | LPAREN core_type_comma_list RPAREN

 393  simple_core_type2 : QUOTE ident
 394                    | UNDERSCORE
 395                    | type_longident
 396                    | simple_core_type2 type_longident
 397                    | LPAREN core_type_comma_list RPAREN type_longident
 398                    | LESS meth_list GREATER
 399                    | LESS GREATER
 400                    | SHARP class_longident opt_present
 401                    | simple_core_type2 SHARP class_longident opt_present
 402                    | LPAREN core_type_comma_list RPAREN SHARP class_longident opt_present
 403                    | LBRACKET tag_field RBRACKET
 404                    | LBRACKET BAR row_field_list RBRACKET
 405                    | LBRACKET row_field BAR row_field_list RBRACKET
 406                    | LBRACKETGREATER opt_bar row_field_list RBRACKET
 407                    | LBRACKETGREATER RBRACKET
 408                    | LBRACKETLESS opt_bar row_field_list RBRACKET
 409                    | LBRACKETLESS opt_bar row_field_list GREATER name_tag_list RBRACKET
 410                    | LPAREN MODULE package_type RPAREN

 411  package_type : mty_longident
 412               | mty_longident WITH package_type_cstrs

 413  package_type_cstr : TYPE LIDENT EQUAL core_type

 414  package_type_cstrs : package_type_cstr
 415                     | package_type_cstr AND package_type_cstrs

 416  row_field_list : row_field
 417                 | row_field_list BAR row_field

 418  row_field : tag_field
 419            | simple_core_type2

 420  tag_field : name_tag OF opt_ampersand amper_type_list
 421            | name_tag

 422  opt_ampersand : AMPERSAND
 423                |

 424  amper_type_list : core_type
 425                  | amper_type_list AMPERSAND core_type

 426  opt_present : LBRACKETGREATER name_tag_list RBRACKET
 427              |

 428  name_tag_list : name_tag
 429                | name_tag_list name_tag

 430  simple_core_type_or_tuple : simple_core_type
 431                            | simple_core_type STAR core_type_list

 432  core_type_comma_list : core_type
 433                       | core_type_comma_list COMMA core_type

 434  core_type_list : simple_core_type
 435                 | core_type_list STAR simple_core_type

 436  meth_list : field SEMI meth_list
 437            | field opt_semi
 438            | DOTDOT

 439  field : label COLON poly_type

 440  label : LIDENT

 441  constant : INT
 442           | CHAR
 443           | STRING
 444           | FLOAT
 445           | INT32
 446           | INT64
 447           | NATIVEINT

 448  signed_constant : constant
 449                  | MINUS INT
 450                  | MINUS FLOAT
 451                  | MINUS INT32
 452                  | MINUS INT64
 453                  | MINUS NATIVEINT
 454                  | PLUS INT
 455                  | PLUS FLOAT
 456                  | PLUS INT32
 457                  | PLUS INT64
 458                  | PLUS NATIVEINT

 459  ident : UIDENT
 460        | LIDENT

 461  val_ident : LIDENT
 462            | LPAREN operator RPAREN

 463  operator : PREFIXOP
 464           | INFIXOP0
 465           | INFIXOP1
 466           | INFIXOP2
 467           | INFIXOP3
 468           | INFIXOP4
 469           | BANG
 470           | PLUS
 471           | PLUSDOT
 472           | MINUS
 473           | MINUSDOT
 474           | STAR
 475           | EQUAL
 476           | LESS
 477           | GREATER
 478           | OR
 479           | BARBAR
 480           | AMPERSAND
 481           | AMPERAMPER
 482           | COLONEQUAL

 483  constr_ident : UIDENT
 484               | LPAREN RPAREN
 485               | COLONCOLON
 486               | FALSE
 487               | TRUE

 488  val_longident : val_ident
 489                | mod_longident DOT val_ident

 490  constr_longident : mod_longident
 491                   | LBRACKET RBRACKET
 492                   | LPAREN RPAREN
 493                   | FALSE
 494                   | TRUE

 495  label_longident : LIDENT
 496                  | mod_longident DOT LIDENT

 497  type_longident : LIDENT
 498                 | mod_ext_longident DOT LIDENT

 499  mod_longident : UIDENT
 500                | mod_longident DOT UIDENT

 501  mod_ext_longident : UIDENT
 502                    | mod_ext_longident DOT UIDENT
 503                    | mod_ext_longident LPAREN mod_ext_longident RPAREN

 504  mty_longident : ident
 505                | mod_ext_longident DOT ident

 506  clty_longident : LIDENT
 507                 | mod_ext_longident DOT LIDENT

 508  class_longident : LIDENT
 509                  | mod_longident DOT LIDENT

 510  toplevel_directive : SHARP ident
 511                     | SHARP ident STRING
 512                     | SHARP ident INT
 513                     | SHARP ident val_longident
 514                     | SHARP ident FALSE
 515                     | SHARP ident TRUE

 516  name_tag : BACKQUOTE ident

 517  rec_flag :
 518           | REC

 519  direction_flag : TO
 520                 | DOWNTO

 521  private_flag :
 522               | PRIVATE

 523  mutable_flag :
 524               | MUTABLE

 525  virtual_flag :
 526               | VIRTUAL

 527  override_flag :
 528                | BANG

 529  opt_bar :
 530          | BAR

 531  opt_semi :
 532           | SEMI

 533  subtractive : MINUS
 534              | MINUSDOT

 535  additive : PLUS
 536           | PLUSDOT

 537  %entry% : '\001' implementation
 538          | '\002' interface
 539          | '\003' toplevel_phrase
 540          | '\004' use_file

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	'\004'  shift 4
	.  error

	%entry%  goto 5


state 1
	%entry% : '\001' . implementation  (537)
	structure_tail : .  (31)

	ASSERT  shift 6
	BACKQUOTE  shift 7
	BANG  shift 8
	BEGIN  shift 9
	CHAR  shift 10
	CLASS  shift 11
	EXCEPTION  shift 12
	EXTERNAL  shift 13
	FALSE  shift 14
	FLOAT  shift 15
	FOR  shift 16
	FUN  shift 17
	FUNCTION  shift 18
	IF  shift 19
	INCLUDE  shift 20
	INT  shift 21
	INT32  shift 22
	INT64  shift 23
	LAZY  shift 24
	LBRACE  shift 25
	LBRACELESS  shift 26
	LBRACKET  shift 27
	LBRACKETBAR  shift 28
	LET  shift 29
	LIDENT  shift 30
	LPAREN  shift 31
	MATCH  shift 32
	MINUS  shift 33
	MINUSDOT  shift 34
	MODULE  shift 35
	NATIVEINT  shift 36
	NEW  shift 37
	OBJECT  shift 38
	OPEN  shift 39
	PLUS  shift 40
	PLUSDOT  shift 41
	PREFIXOP  shift 42
	SEMISEMI  shift 43
	STRING  shift 44
	TRUE  shift 45
	TRY  shift 46
	TYPE  shift 47
	UIDENT  shift 48
	WHILE  shift 49
	EOF  reduce 31

	implementation  goto 50
	structure  goto 51
	seq_expr  goto 52
	structure_item  goto 53
	mod_longident  goto 54
	expr  goto 55
	structure_tail  goto 56
	val_ident  goto 57
	constr_longident  goto 58
	label  goto 59
	simple_expr  goto 60
	expr_comma_list  goto 61
	name_tag  goto 62
	subtractive  goto 63
	additive  goto 64
	val_longident  goto 65
	constant  goto 66


state 2
	%entry% : '\002' . interface  (538)
	signature : .  (62)

	.  reduce 62

	interface  goto 67
	signature  goto 68


state 3
	%entry% : '\003' . toplevel_phrase  (539)

	ASSERT  shift 6
	BACKQUOTE  shift 7
	BANG  shift 8
	BEGIN  shift 9
	CHAR  shift 10
	CLASS  shift 11
	EOF  shift 69
	EXCEPTION  shift 12
	EXTERNAL  shift 13
	FALSE  shift 14
	FLOAT  shift 15
	FOR  shift 16
	FUN  shift 17
	FUNCTION  shift 18
	IF  shift 19
	INCLUDE  shift 20
	INT  shift 21
	INT32  shift 22
	INT64  shift 23
	LAZY  shift 24
	LBRACE  shift 25
	LBRACELESS  shift 26
	LBRACKET  shift 27
	LBRACKETBAR  shift 28
	LET  shift 29
	LIDENT  shift 30
	LPAREN  shift 31
	MATCH  shift 32
	MINUS  shift 33
	MINUSDOT  shift 34
	MODULE  shift 35
	NATIVEINT  shift 36
	NEW  shift 37
	OBJECT  shift 38
	OPEN  shift 39
	PLUS  shift 40
	PLUSDOT  shift 41
	PREFIXOP  shift 42
	SHARP  shift 70
	STRING  shift 44
	TRUE  shift 45
	TRY  shift 46
	TYPE  shift 47
	UIDENT  shift 48
	WHILE  shift 49
	.  error

	toplevel_phrase  goto 71
	top_structure  goto 72
	seq_expr  goto 73
	toplevel_directive  goto 74
	structure_item  goto 75
	mod_longident  goto 54
	expr  goto 55
	val_ident  goto 57
	constr_longident  goto 58
	label  goto 59
	simple_expr  goto 60
	expr_comma_list  goto 61
	name_tag  goto 62
	subtractive  goto 63
	additive  goto 64
	val_longident  goto 65
	constant  goto 66


state 4
	%entry% : '\004' . use_file  (540)

	ASSERT  shift 6
	BACKQUOTE  shift 7
	BANG  shift 8
	BEGIN  shift 9
	CHAR  shift 10
	CLASS  shift 11
	EOF  shift 76
	EXCEPTION  shift 12
	EXTERNAL  shift 13
	FALSE  shift 14
	FLOAT  shift 15
	FOR  shift 16
	FUN  shift 17
	FUNCTION  shift 18
	IF  shift 19
	INCLUDE  shift 20
	INT  shift 21
	INT32  shift 22
	INT64  shift 23
	LAZY  shift 24
	LBRACE  shift 25
	LBRACELESS  shift 26
	LBRACKET  shift 27
	LBRACKETBAR  shift 28
	LET  shift 29
	LIDENT  shift 30
	LPAREN  shift 31
	MATCH  shift 32
	MINUS  shift 33
	MINUSDOT  shift 34
	MODULE  shift 35
	NATIVEINT  shift 36
	NEW  shift 37
	OBJECT  shift 38
	OPEN  shift 39
	PLUS  shift 40
	PLUSDOT  shift 41
	PREFIXOP  shift 42
	SEMISEMI  shift 77
	SHARP  shift 70
	STRING  shift 44
	TRUE  shift 45
	TRY  shift 46
	TYPE  shift 47
	UIDENT  shift 48
	WHILE  shift 49
	.  error

	use_file  goto 78
	seq_expr  goto 79
	toplevel_directive  goto 80
	structure_item  goto 81
	use_file_tail  goto 82
	mod_longident  goto 54
	expr  goto 55
	val_ident  goto 57
	constr_longident  goto 58
	label  goto 59
	simple_expr  goto 60
	expr_comma_list  goto 61
	name_tag  goto 62
	subtractive  goto 63
	additive  goto 64
	val_longident  goto 65
	constant  goto 66


state 5
	$accept : %entry% . $end  (0)

	$end  accept


state 6
	expr : ASSERT . simple_expr  (223)

	BACKQUOTE  shift 7
	BANG  shift 8
	BEGIN  shift 9
	CHAR  shift 10
	FALSE  shift 14
	FLOAT  shift 15
	INT  shift 21
	INT32  shift 22
	INT64  shift 23
	LBRACE  shift 25
	LBRACELESS  shift 26
	LBRACKET  shift 27
	LBRACKETBAR  shift 28
	LIDENT  shift 83
	LPAREN  shift 84
	NATIVEINT  shift 36
	NEW  shift 37
	PREFIXOP  shift 42
	STRING  shift 44
	TRUE  shift 45
	UIDENT  shift 48
	.  error

	mod_longident  goto 85
	val_ident  goto 57
	constr_longident  goto 86
	simple_expr  goto 87
	name_tag  goto 88
	val_longident  goto 65
	constant  goto 66


state 7
	name_tag : BACKQUOTE . ident  (516)
